deploymentservice.yaml

apiVersion: v1 
kind: Service 
metadata: 
  name: ekart-ssvc 
spec:
  selector:
    app: ekart
  ports:
    - port: 8070 # The port that the service is running on in the cluster
      targetPort: 8070 # The port exposed by the service
      nodePort: 31000
  type: NodePort # type of the service.
